@@ -1,3 +1,10 @@
+Summary of important user-visible changes for statistics x.x.x:
+-------------------------------------------------------------------
+
+ ** The following functions are new:
+
+      grp2idx
+
 Summary of important user-visible changes for statistics 1.2.4:
 -------------------------------------------------------------------
 
